# uncoiled

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  cosmic-ray.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  push.yml
docs/: conf.py  getting-started.rst  index.rst
docs/api/: configuration.rst  container.rst  decorators.rst  errors.rst
docs/guide/: components.rst  configuration.rst  fastapi.rst  logging.rst  scopes.rst  testing.rst
src/example/: __init__.py  app.py  config.py  controller.py  domain.py  infra.py  routes.py
src/uncoiled/: __init__.py  _coercion.py  _component.py  _container.py  _envvar.py  _errors.py  _graph.py  _inspection.py  _lifecycle.py  _pytest.py  _qualifiers.py  _scope.py  _types.py  _visualise.py  fastapi.py
src/uncoiled/_config/: __init__.py  _binding.py  _profiles.py  _relaxed.py  _sources.py
tests/: _future_annotations_helpers.py  example_helpers.py  test_binding.py  test_component.py  test_container.py  test_errors.py  test_example.py  test_example_integration.py  test_fastapi.py  test_graph.py  test_inspection.py  test_lifecycle.py  test_logging.py  test_package_setup.py  test_profiles.py  test_pytest_plugin.py  test_qualifiers.py  test_relaxed.py  test_scope.py  test_sources.py  test_types.py
tests/uncoiled/: fastapi_example.py  requests_example.py  test_container.py  test_example.py  test_examples.py
