[project]
name = "uncoiled"
version = "0.1.0"
description = "Dependency injection for modern Python"
readme = "README.md"
authors = [
    { name = "Jonathan Sharpe", email = "mail@jonrshar.pe" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
test = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
]

[tool.coverage.run]
omit = ["tests/**"]

[tool.coverage.html]
directory = "coverage/html/"

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D105",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",
    "S101",
]
