[project]
name = "uncoiled"
version = "0.1.0"
description = "Dependency injection for modern Python"
readme = "README.md"
authors = [
    { name = "Jonathan Sharpe", email = "mail@jonrshar.pe" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
yaml = ["pyyaml>=6.0"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "pre-commit>=4.5.1",
]
lint = [
    "mypy>=1.15",
    "pyright>=1.1",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "types-pyyaml>=6.0",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.0",
    "sphinx-copybutton>=0.5",
]
mutation = [
    "cosmic-ray>=8.4.4",
    "tqdm>=4.67.3",
]
test = [
    "anyio[trio]>=4.0.0",
    "coverage>=7.13.5",
    "httpx>=0.27.0",
    "mermaid-py>=0.8.4",
    "pytest>=9.0.2",
    "uncoiled[fastapi]",
    "uncoiled[yaml]",
]

[project.entry-points.pytest11]
uncoiled = "uncoiled._pytest"

[tool.pytest.ini_options]
addopts = ["-p", "pytester"]

[tool.coverage.run]
omit = ["tests/**"]

[tool.coverage.html]
directory = "coverage/html/"

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D105",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"src/example/**" = [
    "D102",
    "D107",
]
"tests/**" = [
    "D",
    "PLR2004",
    "S101",
]
"docs/**" = [
    "INP001",
]

[tool.ty.rules]
# type: ignore comments are for mypy, not ty — don't flag them as unused
unused-type-ignore-comment = "ignore"
